# lsp-mcp

./: .gitignore  README.md  demo.py  lsp_mcp_server.py  main.py  pyproject.toml
tests/: test_basic.py  test_integration.py
